fixed titles in token page

--- a/token.html
+++ b/token.html
@@ -309,6 +309,34 @@
                         </li>
                     </ul>
                 </div>
+                <div class="token-item token-item-parametrs right">
+                    <div class="token-item-title">Token Parameters</div>
+                    <ul class="token-list">
+                        <li class="cfx">
+                            <span class="float-left">Ticker:</span>
+                            <span class="float-right">AWC</span>
+                        </li>
+                        <li class="cfx">
+                            <span class="float-left">Full name:</span>
+                            <span class="float-right">Atomic Wallet Coin</span>
+                        </li>
+                        <li class="cfx">
+                            <span class="float-left">Decimals:</span>
+                            <span class="float-right">8</span>
+                        </li>
+                        <li class="cfx">
+                            <span class="float-left">Total supply:</span>
+                            <span class="float-right">100,000,000 AWC</span>
+                        </li>
+                        <li class="cfx">
+                            <span class="float-left">Team vesting plan:</span>
+                            <span class="float-right">25% per year</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="token-col">
+
                 <div class="token-item">
                     <div class="token-item-title">Token Distribution</div>
                     <ul class="token-progress">
@@ -341,35 +369,7 @@
                             </span>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <div class="token-col">
-                <div class="token-item token-item-parametrs">
-                    <div class="token-item-title">Token Parameters</div>
-                    <ul class="token-list">
-                        <li class="cfx">
-                            <span class="float-left">Ticker:</span>
-                            <span class="float-right">AWC</span>
-                        </li>
-                        <li class="cfx">
-                            <span class="float-left">Full name:</span>
-                            <span class="float-right">Atomic Wallet Coin</span>
-                        </li>
-                        <li class="cfx">
-                            <span class="float-left">Decimals:</span>
-                            <span class="float-right">8</span>
-                        </li>
-                        <li class="cfx">
-                            <span class="float-left">Total supply:</span>
-                            <span class="float-right">100,000,000 AWC</span>
-                        </li>
-                        <li class="cfx">
-                            <span class="float-left">Team vesting plan:</span>
-                            <span class="float-right">25% per year</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="token-item">
+                </div>    <div class="token-item right">
                     <div class="token-item-title">Documents</div>
                     <div class="token-buttons">
                         <a href="https://download.atomicwallet.io/atomicwallet-AWC-token.pdf" class="button hvr-grow">Token One Pager</a>
