--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
 
                 <div class="list-item hvr-float">
-                    <img src="css/images/crypto-icon/REP.svg" alt>
-                    <span class="list-item-name">Augur</span>
+                    <img src="css/images/crypto-icon/ADA.svg" alt>
+                    <span class="list-item-name">Cardano</span>
                 </div>
 
                 <div class="list-item hvr-float">
