--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <title>AMIS delta dex Atomic Wallet</title>
     <meta name="description" content="Manage your Bitcoin, Ethereum, XRP, Litecoin, Stellar and over 300 tokens in Atomic secure wallet interface. Exchange and buy crypto for USD with credit card.">
-    <link rel="stylesheet" href="atomicwallet/css/main.css">
-    <link rel="stylesheet" href="atomicwallet/css/test-media.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/test-media.css">
     <!-- <link rel="stylesheet" href="css/aos.css"> -->
     <link rel="stylesheet" href="test/css/item-page-blog.css">
 
@@ -78,16 +78,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <div class="header-container">
 <div class="container relative">
-    <img src="atomicwallet/css/images/bg-first-screen.svg" alt class="bg bg-main">
+    <img src="css/images/bg-first-screen.svg" alt class="bg bg-main">
     <header class="header">
         <a href="https://delta-dex.github.io/atomicwallet" class="header-logo">
-            <img src="atomicwallet/css/images/logo.svg" alt="Atomic">
+            <img src="css/images/logo.svg" alt="Atomic">
         </a>
         <nav class="header-menu f-light">
             <a href="/" class="header-menu-here hvr-grow">Wallet</a>
             <a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin" class="hvr-grow">Buy Bitcoin</a>
             <a href="assets" class="hvr-grow">Assets</a>
-            <a href="atomicwallet/downloads" class="hvr-grow">Download</a>
+            <a href="downloads" class="hvr-grow">Download</a>
             <a href="https://support.atomicwallet.io/support/home" target="_blank" class="hvr-grow">Support</a>
             <a href="https://delta-dex.github.io/atomicwallet/blog" class="hvr-grow">Blog</a>
         </nav>
@@ -1224,24 +1224,24 @@ In addition to being a decentralized wallet AW gives you the ability to do token
         <div class="footer-row">
             <div class="footer-new-left">
                 <a href="/"><img src="css/images/logo.png" alt="" class="footer-new-logo"></a><br>
-                <a href="mailto:support@atomicwallet.io" class="footer-new-email f-light">support@atomicwallet.io</a><br>
+                <a href="mailto:info@amisolution.net" class="footer-new-email f-light">info@amisolution.net</a><br>
                 <div class="footer-new-soc">
-                    <a href="https://twitter.com/atomicwallet" target="_blank">
+                    <a href="https://twitter.com/amis_erc20" target="_blank">
                         <img src="css/images/top_twitter.svg">
                     </a>
                     <a href="https://t.me/atomicwalletchat" target="_blank">
                         <img src="css/images/top_telegram.svg">
                     </a>
-                    <a href="https://github.com/Atomicwallet" target="_blank">
+                    <a href="https://github.com/delta-dex/atomicwallet" target="_blank">
                         <img src="css/images/top_github.svg">
                     </a>
-                    <a href="https://medium.com/atomic-wallet" target="_blank">
+                    <a href="https://medium.com/amis_erc20" target="_blank">
                         <img src="css/images/top_medium.svg">
                     </a>
-                    <a href="https://www.reddit.com/r/atomicwallet/" target="_blank">
+                    <a href="https://www.reddit.com/r/amis_erc20/" target="_blank">
                         <img src="css/images/top_reddit.svg">
                     </a>
-                    <a href="https://www.facebook.com/atomicwallet" target="_blank">
+                    <a href="https://www.facebook.com/amistoken" target="_blank">
                         <img src="css/images/top_facebook.svg">
                     </a>
                 </div>
@@ -1250,11 +1250,11 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                 <div class="footer-new-cols">
 
                                                           <div class="footer-new-col">
-                        <div class="footer-new-col-title">Atomic Wallet</div>
+                        <div class="footer-new-col-title">Amis Delta Dex Atomic Wallet</div>
                         <ul class="f-light">
                           <li><a href="https://support.atomicwallet.io/">Support</a></li>
                            <li><a href="https://t.me/atomicwalletchat">Telegram chat</a></li>
-                            <li><a href="https://atomicwallet.io/terms-of-service">Terms of service</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/terms-of-service">Terms of service</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/privacy">Privacy policy</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1zbu1nKCBq2zNCnEtjWsw3oMJei6aFSuZ">Press Kit</a></li>
                         </ul>
@@ -1289,6 +1289,7 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                             <li><a href="https://delta-dex.github.io/atomicwallet/dash">DASH</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/stellar">Stellar (XLM)</a></li>
                             <li><a href="https://delta-dex.github.io/atomicwallet/zcash">Zcash (ZEC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/amis">Amis (AMIS)</a></li>
                         </ul>
                     </div>
 
