--- a/index.html
+++ b/index.html
@@ -722,115 +722,115 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                 <span class="list-item-name">Bitcoin</span>
             </div>
             </a>
-             <a href="https://atomicwallet.io/ethereum">
+             <a href="https://delta-dex.github.io/atomicwallet/ethereum">
             <div class="list-item hvr-float">
                 <img src="css/images/crypto/ETH.svg" alt>
                 <span class="list-item-name">Ethereum</span>
             </div>
             </a>
-             <a href="https://atomicwallet.io/litecoin">
+             <a href="https://delta-dex.github.io/atomicwallet/litecoin">
              <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/LTC.svg" alt>
                     <span class="list-item-name">Litecoin</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/ripple">
+                <a href="https://delta-dex.github.io/atomicwallet/ripple">
             <div class="list-item hvr-float">
                     <img src="css/images/crypto/XRP.svg" alt>
                     <span class="list-item-name">XRP</span>
                 </div>
               </a>
-              <a href="https://atomicwallet.io/binance-coin">
+              <a href="https://delta-dex.github.io/atomicwallet/binance-coin">
             <div class="list-item hvr-float">
                 <img src="css/images/crypto-icon/BNB.svg" alt>
                 <span class="list-item-name">Binance Coin</span>
              </div>
              </a>
-              <a href="https://atomicwallet.io/how-to-trade-awc">
+              <a href="https://delta-dex.github.io/atomicwallet/how-to-trade-awc">
              <div class="list-item hvr-float">
                  <img src="css/images/crypto/AWC.svg" alt>
                  <span class="list-item-name">AWC</span>
             </div>
             </a>
-            <a href="https://atomicwallet.io/how-to-add-erc20-token">
+            <a href="https://delta-dex.github.io/atomicwallet/how-to-add-erc20-token">
             <div class="list-item hvr-float">
                 <img src="css/images/crypto/ERC20.svg" alt>
                 <span class="list-item-name">300+ ERC20 tokens</span>
             </div>
             </a>
-            <a href="https://atomicwallet.io/tron">
+            <a href="https://delta-dex.github.io/atomicwallet/tron">
              <div class="list-item hvr-float">
                 <img src="css/images/crypto/TRX.svg" alt>
                 <span class="list-item-name">Tron</span>
             </div>
             </a>
-            <a href="https://atomicwallet.io/bitcoin-cash">
+            <a href="https://delta-dex.github.io/atomicwallet/bitcoin-cash">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/BCH.svg" alt>
                     <span class="list-item-name">Bitcoin Cash</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/ethereum-classic">
+                <a href="https://delta-dex.github.io/atomicwallet/ethereum-classic">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/ETC.svg" alt>
                     <span class="list-item-name">Ethereum Classic</span>
                 </div>
                  </a>
-                <a href="https://atomicwallet.io/zcash">
+                <a href="https://delta-dex.github.io/atomicwallet/zcash">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/ZEC.svg" alt>
                     <span class="list-item-name">Zcash</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/dash">
+                <a href="https://delta-dex.github.io/atomicwallet/dash">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/DASH.svg" alt>
                     <span class="list-item-name">DASH</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/monero">
+                <a href="https://delta-dex.github.io/atomicwallet/monero">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/XMR.svg" alt>
                     <span class="list-item-name">Monero</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/digibyte">
+                <a href="https://delta-dex.github.io/atomicwallet/digibyte">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/DGB.svg" alt>
                     <span class="list-item-name">DigiByte</span>
                 </div>
                 </a>
-                 <a href="https://atomicwallet.io/stellar">
+                 <a href="https://delta-dex.github.io/atomicwallet/stellar">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/XLM.svg" alt>
                     <span class="list-item-name">Stellar</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/bitcoin-gold">
+                <a href="https://delta-dex.github.io/atomicwallet/bitcoin-gold">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto/BTG.svg" alt>
                     <span class="list-item-name">Bitcoin Gold</span>
                  </div>
                  </a>
-                   <a href="https://atomicwallet.io/dogecoin">
+                   <a href="https://delta-dex.github.io/atomicwallet/dogecoin">
                   <div class="list-item hvr-float">
                     <img src="css/images/crypto/DOGE.svg" alt>
                     <span class="list-item-name">Dogecoin</span>
                  </div>
                  </a>
-                <a href="https://atomicwallet.io/qtum">
+                <a href="https://delta-dex.github.io/atomicwallet/qtum">
                 <div class="list-item hvr-float mobile-hide">
                     <img src="css/images/crypto-icon/QTUM.svg" alt>
                     <span class="list-item-name">QTUM</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/cardano">
+                <a href="https://delta-dex.github.io/atomicwallet/cardano">
                 <div class="list-item hvr-float">
                 <img src="css/images/crypto-icon/ADA.svg" alt>
                     <span class="list-item-name">Cardano</span>
                 </div>
                 </a>
-                <a href="https://atomicwallet.io/bitcoin-sv">
+                <a href="https://delta-dex.github.io/atomicwallet/bitcoin-sv">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/BCHSV.svg" alt>
                     <span class="list-item-name">Bitcoin SV</span>
@@ -841,37 +841,37 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                     <img src="css/images/crypto-icon/OMG.svg" alt>
                     <span class="list-item-name">OmiseGO</span>
                  </div>
-                 <a href="https://atomicwallet.io/decred">
+                 <a href="https://delta-dex.github.io/atomicwallet/decred">
                  <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/DCR.svg" alt>
                     <span class="list-item-name">Decred</span>
                  </div>
                  </a>
-                 <a href="https://atomicwallet.io/vechain">
+                 <a href="https://delta-dex.github.io/atomicwallet/vechain">
                  <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/VET.svg" alt>
                     <span class="list-item-name">VeChain</span>
                  </div>
                   </a>
-                  <a href="https://atomicwallet.io/neo">
+                  <a href="https://delta-dex.github.io/atomicwallet/neo">
                  <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/NEO.svg" alt>
                     <span class="list-item-name">NEO</span>
                  </div>
                  </a>
-                 <a href="https://atomicwallet.io/bitcoin-diamond">
+                 <a href="https://delta-dex.github.io/atomicwallet/bitcoin-diamond">
                  <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/BCD.svg" alt>
                     <span class="list-item-name">Bitcoin Diamond</span>
                  </div>
                  </a>
-                 <a href="https://atomicwallet.io/eos">
+                 <a href="https://delta-dex.github.io/atomicwallet/eos">
                 <div class="list-item hvr-float">
                     <img src="css/images/crypto-icon/EOS.svg" alt>
                     <span class="list-item-name">EOS</span>
                  </div>
                  </a>
-                 <a href="https://atomicwallet.io/tezos">
+                 <a href="https://delta-dex.github.io/atomicwallet/tezos">
                  <div class="list-item hvr-float">
                     <img class="" src="css/images/crypto-icon/XTZ.svg" alt>
                     <span class="list-item-name">Tezos</span>
