--- a/index.html
+++ b/index.html
@@ -746,6 +746,12 @@ In addition to being a decentralized wallet AW gives you the ability to do token
                 <span class="list-item-name">Binance Coin</span>
              </div>
              </a>
+              <a href="https://delta-dex.github.io/atomicwallet/how-to-trade-amis">
+             <div class="list-item hvr-float">
+                 <img src="css/images/crypto/AMIS.svg" alt>
+                 <span class="list-item-name">AMIS</span>
+            </div>
+            </a>
               <a href="https://delta-dex.github.io/atomicwallet/how-to-trade-awc">
              <div class="list-item hvr-float">
                  <img src="css/images/crypto/AWC.svg" alt>
