--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin">Buy Bitcoin</a>
         <a href="/assets">Assets</a>
         <a href="/downloads">Download</a>
-        <a href="https://support.atomicwallet.io/support/home">Support</a>
+        <a href="https://delta-dex.github.io/atomicwallet/support/home">Support</a>
         <a href="https://delta-dex.github.io/atomicwallet/blog">Blog</a>
         <button class="header-menu-mobile-close" id="menu-button-close"></button>
     </div>
