--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ In addition to being a decentralized wallet AW gives you the ability to do token
              </a>
               <a href="https://delta-dex.github.io/atomicwallet/how-to-trade-amis">
              <div class="list-item hvr-float">
-                 <img src="css/images/crypto/AMIS.svg" alt>
+                 <img src="css/images/crypto/amis.svg" alt>
                  <span class="list-item-name">AMIS</span>
             </div>
             </a>
