--- a/assets.html
+++ b/assets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://atomicwallet.io/cryptocurrency-prices">
+  <meta http-equiv="refresh" content="0; url=https://delta-dex.github.io/atomicwallet/cryptocurrency-prices">
   <title></title>
 </head>
 <body>
