--- a/cryptocurrency-prices.html
+++ b/cryptocurrency-prices.html
@@ -16,7 +16,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KBC3CH8');</script>
+    })(window,document,'script','dataLayer','GTM-');</script>
     <!-- End Google Tag Manager -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,7 +49,7 @@
 
 
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBC3CH8"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
@@ -62,11 +62,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="header-menu-mobile header-menu-close f-light only-mobile" id="menu-mobile">
     <div class="container relative">
         <a href="/">Wallet</a>
-        <a href="https://atomicwallet.io/buy-bitcoin">Buy Bitcoin</a>
+        <a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin">Buy Bitcoin</a>
         <a href="/assets" class="header-menu-here">Assets</a>
         <a href="/downloads">Download</a>
         <a href="https://support.atomicwallet.io/support/home">Support</a>
-        <a href="https://atomicwallet.io/blog">Blog</a>
+        <a href="https://delta-dex.github.io/atomicwallet/blog">Blog</a>
         <button class="header-menu-mobile-close" id="menu-button-close"></button>
     </div>
 </div>
@@ -79,27 +79,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </a>
         <nav class="header-menu f-light">
             <a href="/">Wallet</a>
-            <a href="https://atomicwallet.io/buy-bitcoin" class="hvr-grow">Buy Bitcoin</a>
+            <a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin" class="hvr-grow">Buy Bitcoin</a>
             <a href="assets" class="header-menu-here hvr-grow">Assets</a>
             <a href="/downloads" class="hvr-grow">Download</a>
             <a href="https://support.atomicwallet.io/support/home" target="_blank" class="hvr-grow">Support</a>
-            <a href="https://atomicwallet.io/blog" class="hvr-grow">Blog</a>
+            <a href="https://delta-dex.github.io/atomicwallet/blog" class="hvr-grow">Blog</a>
         </nav>
         <nav class="header-menu-icons  f-light">
 
-            <a href="https://twitter.com/atomicwallet" target="_blank" class="hvr-float">
+            <a href="https://twitter.com/amis_erc20" target="_blank" class="hvr-float">
                 <img src="css/images/top_twitter.svg">
             </a>
             <a href="https://t.me/atomicwalletchat" target="_blank" class="hvr-float">
                 <img src="css/images/top_telegram.svg">
             </a>
-            <a href="https://medium.com/atomic-wallet" target="_blank" class="hvr-float">
+            <a href="https://medium.com/amis_erc20" target="_blank" class="hvr-float">
                     <img src="css/images/top_medium.svg">
                 </a>
-            <a href="https://www.facebook.com/atomicwallet" target="_blank" class="hvr-float">
+            <a href="https://www.facebook.com/amis.erc20" target="_blank" class="hvr-float">
                     <img src="css/images/top_facebook.svg">
                 </a>
-            <a href="https://www.reddit.com/r/atomicwallet/" target="_blank" class="hvr-float">
+            <a href="https://www.reddit.com/r/amis_erc20/" target="_blank" class="hvr-float">
                 <img src="css/images/top_reddit.svg">
             </a>
             <a href="https://steemit.com/@atomicwallet" target="_blank" class="hvr-float">
@@ -159,22 +159,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="/"><img src="css/images/logo.png" alt="" class="footer-new-logo"></a><br>
                 <a href="mailto:support@atomicwallet.io" class="footer-new-email f-light">support@atomicwallet.io</a><br>
                 <div class="footer-new-soc">
-                    <a href="https://twitter.com/atomicwallet" target="_blank">
+                    <a href="https://twitter.com/amis_erc20" target="_blank">
                         <img src="css/images/top_twitter.svg">
                     </a>
                     <a href="https://t.me/atomicwalletchat" target="_blank">
                         <img src="css/images/top_telegram.svg">
                     </a>
-                    <a href="https://github.com/Atomicwallet" target="_blank">
+                    <a href="https://github.com/delta-dex/atomicwallet" target="_blank">
                         <img src="css/images/top_github.svg">
                     </a>
-                    <a href="https://medium.com/atomic-wallet" target="_blank">
+                    <a href="https://medium.com/amis_erc20" target="_blank">
                         <img src="css/images/top_medium.svg">
                     </a>
-                    <a href="https://www.reddit.com/r/atomicwallet/" target="_blank">
+                    <a href="https://www.reddit.com/r/amis_erc20/" target="_blank">
                         <img src="css/images/top_reddit.svg">
                     </a>
-                    <a href="https://www.facebook.com/atomicwallet" target="_blank">
+                    <a href="https://www.facebook.com/amis.erc20" target="_blank">
                         <img src="css/images/top_facebook.svg">
                     </a>
                 </div>
@@ -183,12 +183,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="footer-new-cols">
 
                                                           <div class="footer-new-col">
-                        <div class="footer-new-col-title">Atomic Wallet</div>
+                        <div class="footer-new-col-title">Amis Delta Dex Atomic Wallet</div>
                         <ul class="f-light">
-                          <li><a href="https://support.atomicwallet.io/">Support</a></li>
+                          <li><a href="https://delta-dex.github.io/atomicwallet/support/">Support</a></li>
                            <li><a href="https://t.me/atomicwalletchat">Telegram chat</a></li>
-                            <li><a href="https://atomicwallet.io/terms-of-service">Terms of service</a></li>
-                            <li><a href="https://atomicwallet.io/privacy">Privacy policy</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/terms-of-service">Terms of service</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/privacy">Privacy policy</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1zbu1nKCBq2zNCnEtjWsw3oMJei6aFSuZ">Press Kit</a></li>
                         </ul>
                     </div>
@@ -199,29 +199,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <div class="footer-new-col">
                         <div class="footer-new-col-title">Buy Cryptoсurrency</div>
                         <ul class="f-light">
-                            <li><a href="https://atomicwallet.io/buy-bitcoin">Buy Bitcoin (BTC)</a></li>
-                            <li><a href="https://atomicwallet.io/buy-litecoin">Buy Litecoin (LTC)</a></li>
-                            <li><a href="https://atomicwallet.io/buy-ethereum">Buy Ethereum (ETH)</a></li>
-                            <li><a href="https://atomicwallet.io/buy-ripple">Buy Ripple (XRP)</a></li>
-                            <li><a href="https://atomicwallet.io/buy-bitcoin-cash">Buy Bitcoin Cash (BCH)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin">Buy Bitcoin (BTC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/buy-litecoin">Buy Litecoin (LTC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/buy-ethereum">Buy Ethereum (ETH)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/buy-ripple">Buy Ripple (XRP)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/buy-bitcoin-cash">Buy Bitcoin Cash (BCH)</a></li>
                         </ul>
                     </div>
 
                     <div class="footer-new-col">
                         <div class="footer-new-col-title">Assets</div>
                         <ul class="f-light">
-                            <li><a href="https://atomicwallet.io/bitcoin-wallet">Bitcoin (BTC)</a></li>
-                            <li><a href="https://atomicwallet.io/ethereum">Ethereum (ETH)</a></li>
-                            <li><a href="https://atomicwallet.io/ripple">Ripple (XRP)</a></li>
-                            <li><a href="https://atomicwallet.io/litecoin">Litecoin (LTC)</a></li>
-                            <li><a href="https://atomicwallet.io/eos">EOS</a></li>
-                            <li><a href="https://atomicwallet.io/neo">NEO</a></li>
-                            <li><a href="https://atomicwallet.io/tron">TRON (TRX)</a></li>
-                            <li><a href="https://atomicwallet.io/dogecoin">Dogecoin (DOGE)</a></li>
-                            <li><a href="https://atomicwallet.io/cardano">Cardano (ADA)</a></li>
-                            <li><a href="https://atomicwallet.io/dash">DASH</a></li>
-                            <li><a href="https://atomicwallet.io/stellar">Stellar (XLM)</a></li>
-                            <li><a href="https://atomicwallet.io/zcash">Zcash (ZEC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/bitcoin-wallet">Bitcoin (BTC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/ethereum">Ethereum (ETH)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/ripple">Ripple (XRP)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/litecoin">Litecoin (LTC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/eos">EOS</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/neo">NEO</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/tron">TRON (TRX)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/dogecoin">Dogecoin (DOGE)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/cardano">Cardano (ADA)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/dash">DASH</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/stellar">Stellar (XLM)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/zcash">Zcash (ZEC)</a></li>
+                            <li><a href="https://delta-dex.github.io/atomicwallet/amis">Amis (AMIS)</a></li>
                         </ul>
                     </div>
 
